# advent_of_code

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
2020/: 01.py
2020/01/: main.py
2021/: 01.py  02.py  03.py  d_03.py
2021/tests/: test_01.py  test_02.py  test_03.py
_init/: run.sh
_init/cookiecutter/: cookiecutter.json
aoc/utils/: __init__.py  input.py  visualize.py
aoc_utils/: __init__.py  input.py  parse.py
boiler/: d_DAY.py  d_xx.py  init.sh
boiler/tests/: test_DAY.py  test_xx.py
y_2019/: d_01.py  d_02.py
y_2019/tests/: test_01.py  test_02.py
y_2020/: d_01.py  d_02.py  d_03.py  d_04.py  d_05.py  d_25.py
y_2020/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  (+1 more)
y_2021/: d_01.py  d_02.py  d_03.py  d_04.py  d_05.py  d_06.py  d_07.py  d_08.py  d_09.py  d_10.py  d_11.py  d_12.py  d_13.py  d_14.py  d_15.py  d_16.py  d_17.py  d_18.py  d_19.py  d_20.py  d_21.py  d_22.py  d_24.py  d_25.py
y_2022/: aoc_utils  d_01.py  d_02.py  d_03.py  d_04.py  d_04_oneliner.py  d_05.py  d_06.py  d_07.py  d_08.py  d_09.py  d_10.py  d_11.py  d_12.py  d_13.py  d_14.py  d_15.py  d_16.py  d_17.py  d_18.py  d_19.py  d_20.py  d_21.py  d_22.py  d_23.py  d_24.py  d_25.py
y_2023/: d_01.py  d_02.py  d_03.py  d_04.py  d_05.py  d_06.py  d_07.py  d_08.py  d_09.py  d_10.py  d_11.py  d_12.py  d_13.py  d_14.py  d_15.py  d_16.py  d_17.py  d_18.py  d_19.py  d_20.py  d_21.py  d_22.py  d_23.py  d_24.py  d_25.py
y_2025/: d_01.py  d_02.py  d_03.py  d_04.py  d_05.py  d_06.py  d_07.py  d_08.py  d_09.py  d_10.py  d_11.py  d_12.py
(+89 files in other folders)
