[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Maxime Froment <mfroment99@gmail.com>"]
readme = "README.md"
packages = [{ include = "aoc" }, { include = "y_2019" }, { include = "y_2020" }, { include = "y_2021" }, { include = "y_2022" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
advent-of-code-data = "^1.3.2"
networkx = "^2.8.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
