[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Maxime Froment <mfroment99@gmail.com>"]
readme = "README.md"
packages = [{ include = "aoc" }, { include = "y_2019" }, { include = "y_2020" }, { include = "y_2021" }, { include = "y_2022" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
advent-of-code-data = "*"
networkx = "*"
indexed = "*"
sympy = "*"
z3-solver = "^4.12.4.0"
cookiecutter = "^2.6.0"
ruff = "^0.14.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120